deps/v8/test/message/fail/array-binding-pattern-await1.out
*%(basename)s:6: SyntaxError: Invalid destructuring assignment target
  let [await b] = [];
       ^^^^^^^
SyntaxError: Invalid destructuring assignment target
